Smaller fixes for IO package